# OfflineSiteSurvey

./: .env.example  .gitignore  LICENSE  README.md  README_KoboToolbox_MVP.md  REMAINING_ISSUES.md  ROADMAP.md  agents.md  alternative_roadmap.md  backup_restore.py  commercial_building_choices.xlsform  commercial_building_survey.xlsform  commercial_building_survey_template.md  conditional_logic_examples.md  create_concat.py  pyproject.toml  roadmap_analysis.md  run.py  setup_crsqlite.sh
archive/kobotoolbox/kobo_bridge/: routes.py  tasks.py
backend/: app.py  cli.py  logging_config.py  models.py  store_survey_template.py  utils.py
backend/base/: __init__.py  crud_base.py  generic_crud.py
backend/blueprints/: auth.py  config.py  crdt.py  photos.py  projects.py  sites.py  surveys.py  teams.py  templates.py
backend/data/templates/: store.json
backend/services/: cloud_storage.py  crdt_service.py  orphan_cleanup_service.py  photo_integrity_service.py  upload_queue.py
migrations/versions/: 001_add_phase2_fields.py  002_section_tags.py
shared/: __init__.py  enums.py  models.py  schemas.py  utils.py  validation.py
src/kobo_bridge/: __init__.py  companycam_auth.py  companycam_client.py  kobo_client.py  models.py
src/kobo_bridge/templates/: base.html  dashboard.html
src/survey_app/: ChatGptSuggestions.md  __main__.py  app.py  config_manager.py  local_db.py  logging_config.py  state.py  toga_mock.py  ui_manager.py
src/survey_app/handlers/: companycam_handler.py  photo_handler.py  project_handler.py  site_handler.py  survey_handler.py  sync_handler.py  tag_management_handler.py  template_handler.py
src/survey_app/repositories/: __init__.py  survey_repository.py
src/survey_app/services/: api_service.py  auth_service.py  companycam_service.py  db_service.py  image_service.py  network_queue.py  sync_service.py  tag_mapper.py
src/survey_app/ui/: config_view.py  login_ui.py  project_view.py  site_view.py  survey_ui.py  team_ui.py  ui_builder.py
tests/: __init__.py  conftest.py  phase2_features_demo.py  test_phase2_features.py
tests/test_backend/: __init__.py  test_api.py  test_auth_api_fixes.py  test_auth_models.py  test_cloud_storage.py  test_crdt_sync.py  test_integrity.py  test_models.py  test_utils.py
tests/test_frontend/: __init__.py  test_handlers.py  test_local_db.py  test_ui_manager.py
tests/test_shared/: test_config_manager.py  test_validation.py
