[project]
name = "kobotoolbox-bridge-mvp"
version = "0.1.0"
description = "Bridge between KoboToolbox and CompanyCam for offline site surveys"
authors = [
    {name = "Keith", email = "keith@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "psycopg2-binary>=2.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"