[project]
name = "site-survey-app"
version = "0.1.0"
description = "Offline-first site survey application with CRDT-based synchronization"
authors = [
    {name = "Keith", email = "keith@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies can be listed here if they are truly shared
    "appdirs>=1.4.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
backend = [
    "pysqlite3-binary>=0.5.2",
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "psycopg2-binary>=2.9.0",
    "pillow>=10.0.0", # Pillow is often used in backends for image processing
    "appdirs>=1.4.4",
    "apache-libcloud>=3.8.0",
    "bleach>=6.1.0",
    "tenacity>=8.2.0"
]
frontend = [
    "briefcase>=0.3.17",
    "toga>=0.4.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "appdirs>=1.4.4"
]
testing = [
    "pytest>=7.4.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "src"]

[tool.briefcase]
project_name = "Site Survey App"
bundle = "com.keith.surveyapp"
version = "0.1.0"
url = "https://example.com"
license = "BSD license"
author = "Keith"
author_email = "keith@example.com"
output_format = "app"

[tool.briefcase.app.survey_app]
formal_name = "Site Survey App"
description = "Offline-first site survey application"
icon = "icon"
sources = ["src/survey_app"]
requires = [
    "toga>=0.4.0",
    "pillow>=10.0.0",
    "requests>=2.31.0"
]

[tool.briefcase.app.survey_app.permission]
camera = "Needed for taking site survey photos"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
]
